fix: ch5-list-scrollbar

--- a/src/shell/app/template/assets/scss/custom/_scrollbar.scss
+++ b/src/shell/app/template/assets/scss/custom/_scrollbar.scss
@@ -18,13 +18,3 @@
   border-radius: 3px;
   border: 1px solid rgba(255, 255, 255, 0.9);
 }
-
-#horizontal-menu-swiper-thumb, #vertical-menu-swiper-thumb {
-  --ch5-list--scrollbar-track-color: transparent;
-  --ch5-list--scrollbar-thumb-color: rgba(0, 0, 0, 0.5);
-  --ch5-list--scrollbar-border-radius: 3px;
-  --ch5-list--scrollbar-width: 0;
-  .scrollbar {
-    border: 1px solid rgba(255, 255, 255, 0.9);
-  }
-}
